# muridae

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile
inc/: cli.hpp  errors.hpp  snippeter.hpp
src/: cli.cpp  main.cpp  snippeter.cpp
tests/integration_cpp/: test_file_code.txt  test_int_base.cpp
tests/unit_cpp/: test_unit_base.cpp
